[project]
name = "lightray"
version = "0.2.3"
description = "Distribute a LightningCLI hyperparameter search with Ray Tune"
authors = [{ name = "Ethan Jacob Marx", email = "ethan.marx@ligo.org" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "ray[default, tune]>=2.8.0,<3",
    "lightning>=2.4.0",
    "s3fs>=2024.9.0,<2025",
    "pyarrow>=17.0.0,<18",
    "jsonargparse[signatures]>=4.33.2,<5",
    "wandb>=0.18.5,<0.19",
    "omegaconf>=2.3.0,<3",
]

[project.scripts]
lightray = "lightray.cli:cli"

[dependency-groups]
dev = [
    "pre-commit>=3.8.0,<4",
    "pytest>=8.3.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
